--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li {
+  list-style-type: none;
 }
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+}
+
+.mt-xl {
+  margin-top: 5rem
+}
+
+.mt-xxl {
+  margin-top: 6rem
+}
+
+.mt-xxxl {
+  margin-top: 7rem
+}
+
+img {
+  width: 50px;
+  height: auto;
+}
+
+.BorderBottom {
+  border-bottom: 1px solid white;
+  margin: 5rem;
+}
+
+.loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 768px) {
+
+  .BorderBottom {
+    border-bottom: 1px solid white;
+    margin: 3rem;
+    width: 800px;
+  }
+}
+
