--- a/src/components/HomeGrid.css
+++ b/src/components/HomeGrid.css
@@ -1,31 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
 
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
 }
 
-.title {
+.pre-title {
+  color: rgb(240, 230, 230);
+  font-family: 'Syne Mono', monospace;
+  font-size: 0.9rem;
+  background-color: #0d131c;
+  width: 185px;
   text-align: center;
-  margin-top: 6rem;
-  font-family: 'Baloo 2', cursive;
+  padding-top: 1.2rem;
+  padding-bottom: 6.5rem;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  position: absolute;
+  margin-bottom: 3rem;
+  top: 22%;
+  left: 10.5%;
+}
+
+.title {
+  font-family: 'Titillium Web', sans-serif;
   font-size: 72px;
-  line-height: 68px;
-  color: #00122C;
+  line-height: 25px;
+  color: rgb(240, 230, 230);
   position: relative;
+}
+
+.title-span {
+  font-family: 'Syne Mono', monospace;
+  font-weight: 100;
+  font-size: 2rem;
+}
+
+.titlee {
+  margin-top: 5rem;
+}
+
+.titleLower {
+  margin-top: 2rem;
+  font-family: 'Titillium Web', sans-serif;
+  line-height: 30px;
+  color: #d8c1c1;
+  font-weight: 100;
+}
+
+.mainButton {
+  background-color: transparent;
+  font-size: 1.2rem;
+  padding: 0.3rem;
+  border: 1px solid #d8c1c1;;
+  margin-top: 2rem;
+  color: #d8c1c1;
+  width: 5.5rem;
+  transition: 0.2s ease-in-out;
+  outline: none;
+}
+
+.mainButton:hover {
+  background-color: #d8c1c1;
+  color: #141936;
 }
 
 .after {
   text-align: center;
   margin-top: 9rem;
-  font-family: 'Baloo 2', cursive;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 42px;
   line-height: 68px;
   color: #00122C;
   animation: fadein 2s;
 }
 
+.gridTitle {
+  color: rgb(230, 211, 211);
+  font-size: 4rem;
+  margin-top: 9.6rem;
+  border-bottom: 1px solid rgb(230, 211, 211);
+}
+
+.projectsContainer {
+  max-width: 1000px;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 3rem;
+}
+
 .grid {
+  margin-top: 2rem;
   display: grid;
   grid-auto-rows: 300px;
   gap: 1rem;
@@ -34,7 +102,7 @@
 }
 
 .item1 {
-  background-color: #1b3631;
+  background-color: #00122c;
   grid-column: 1 / 8;
   grid-row: 1 / 3;
   transition: 0.2s ease-in-out;
@@ -45,21 +113,22 @@
 }
 
 .item2 {
-  background-color: #f6cd8b;
+  background-color: #00122c;
   grid-column-start: 8;
   grid-column-end: 13;
   transition: 0.2s ease-in-out;
+  position: relative;
 }
 
-.item2:hover {
-  transform: scale(0.99);
-}
+
 
 .item3 {
   background-color: #01a572;
   grid-column-start: 8;
   grid-column-end: 13;
   transition: 0.2s ease-in-out;
+  position: relative;
+  overflow: hidden;
 }
 
 .item3:hover {
@@ -119,16 +188,17 @@
   font-family: 'Baloo 2', cursive;
   font-weight: 100;
   color: rgb(247, 239, 239);
-  padding-top: 2rem;
-  padding-left: 2.5rem;
+  padding-top: 0.5rem;
+  padding-left: 1rem;
+  font-size: 1.2rem;
 }
 
 .name2 {
   font-family: 'Baloo 2', cursive;
   font-weight: 100;
   color: #00122c;
-  padding-top: 2rem;
-  padding-left: 2.5rem;
+  padding-top: 0.5rem;
+  padding-left: 1rem;
 }
 
 .nameLast {
@@ -159,12 +229,14 @@
 
 .subName {
   color: rgb(247, 239, 239);
-  padding-left: 2.5rem;
+  padding-left: 1rem;
+  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .subName2 {
   color: #00122c;
-  padding-left: 2.5rem;
+  padding-left: 1rem;
 }
 
 .item1:hover >span{
@@ -172,17 +244,8 @@
 }
 
 .item1:hover::after{
-  padding-left: 2.5rem; 
-  content: 'Explore project';
-  color: rgb(247, 239, 239);
-}
-
-.item2:hover >span{
-  display: none;
-}
-
-.item2:hover::after{
-  padding-left: 2.5rem; 
+  font-size: 0.8rem;
+  padding-left: 1rem; 
   content: 'Explore project';
   color: rgb(247, 239, 239);
 }
@@ -192,7 +255,8 @@
 }
 
 .item3:hover::after{
-  padding-left: 2.5rem; 
+  font-size: 0.8rem;
+  padding-left: 1rem; 
   content: 'Explore project';
   color: rgb(247, 239, 239);
 }
@@ -206,7 +270,8 @@
 }
 
 .item4:hover::after{
-  padding-left: 2.5rem; 
+  font-size: 0.8rem;
+  padding-left: 1rem; 
   content: 'Explore project';
   color: rgb(247, 239, 239);
 }
@@ -216,7 +281,8 @@
 }
 
 .item5:hover::after{
-  padding-left: 2.5rem; 
+  font-size: 0.8rem;
+  padding-left: 1rem;  
   content: 'Explore project';
   color: #00122c;
 }
@@ -226,7 +292,8 @@
 }
 
 .item6:hover::after{
-  padding-left: 2.5rem; 
+  font-size: 0.8rem;
+  padding-left: 1rem; 
   content: 'Explore project';
   color: rgb(247, 239, 239);
 }
@@ -290,6 +357,243 @@
 .gif:hover {
   width: 500px;
   display: inline-block;
+}
+
+.commerce {
+  opacity: 0.8;
+  height: 270px;
+  width: 497px;
+  cursor: pointer;
+  position: absolute;
+  left: 2rem;
+  top: 2rem;
+  transition: 0.2s ease-in-out;
+  
+}
+
+.commerce:hover {
+  opacity: 0.9;
+  transform: translate(-27px, -27px);
+}
+
+
+
+.project-frame {
+  margin-top: 5rem;
+  height: 280px;
+  width: 507px;
+  background-color: #00122c;
+  position: relative;
+}
+
+.project-frame2 {
+  margin-top: 9rem;
+  height: 280px;
+  width: 507px;
+  background-color: #00122c;
+  position: relative;
+}
+
+.projectHolder {
+  color: white;
+  display: flex;
+  justify-content: space-around;
+}
+
+.projectHolder2 {
+  margin-bottom: 13rem;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+}
+
+.projectDescription {
+  margin-top: 2rem;
+  width: 400px;
+}
+
+.projectDescription2 {
+  margin-top: 6rem;
+  width: 400px;
+}
+
+.projectText {
+  margin-top: 3rem;
+  background-color: #0d131c;
+  padding: 1rem;
+}
+
+.technologies {
+  margin-top: 0.7rem;
+  color: rgb(228, 215, 215);
+}
+
+.projectName {
+  color: rgb(230, 211, 211);
+  float: right;
+}
+
+.github {
+  
+  margin-left: 0.7rem;
+  font-size: 1.5rem;
+  color: white;
+  cursor: pointer;
+}
+
+.technologiesContainer {
+  display: flex;
+}
+
+.shape {
+  background-color: blueviolet;
+  width: 530px;
+  height: 520px;
+  transform: skew(0deg, -35deg);
+  position: absolute;
+  bottom: -11rem;
+  overflow: hidden;
+}
+
+.social-media {
+  color: white;
+  position: fixed;
+  bottom: 35%;
+  right: 0rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #0d131c;
+  padding-right: 1rem;
+  
+  
+ 
+}
+
+.social-media > li {
+  padding-top: 0.7rem;
+  transition: 0.2s ease-in-out;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.social-media > li:hover {
+  transform: scale(1.1);
+}
+
+.shark {
+  width: 250px;
+  height: auto;
+  color: black;
+  opacity: 0.7;
+  position: absolute;
+  right: 5%;
+  top: 20%;
+}
+
+.shark2 {
+  width: 300px;
+  height: auto;
+  color: black;
+  opacity: 0.8;
+  position: absolute;
+  right: 29.5%;
+  top: 40%;
+}
+
+.shark3 {
+  width: 450px;
+  height: auto;
+  color: black;
+  opacity: 1;
+  position: absolute;
+  right: 5%;
+  top: 42%;
+}
+
+.astroo {
+  width: 300px;
+  height: auto;
+  color: black;
+  opacity: 1;
+  position: absolute;
+  right: 0%;
+  top: 50%;
+  z-index: -1;
+}
+
+.stars {
+  width: 450px;
+  height: auto;
+  color: black;
+  opacity: 1;
+  position: absolute;
+  right: 30%;
+  top: 61%;
+}
+
+.string {
+  width: 180px;
+  height: auto;
+  color: black;
+  opacity: 1;
+  position: absolute;
+  right: 0rem;
+  top: 60%;
+  z-index: -1;
+}
+
+.shark4 {
+  width: 70px;
+  height: auto;
+  color: black;
+  opacity: 1;
+  position: absolute;
+  left: 40%;
+  top: 55%;
+}
+
+.bubble {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  top: 70%;
+}
+
+.shootingStars {
+  position: absolute;
+  top: 40%;
+  width: 450px;
+  height: auto;
+  left: 30rem;
+}
+
+.shootingStars2 {
+  position: absolute;
+  top: 80%;
+  width: 450px;
+  height: auto;
+  right: 30rem;
+}
+
+.homeContainer {
+  position: relative;
+}
+
+#theman {
+  transform: scale(5);
+  animation: move 1s ease-in-out;
+}
+
+@keyframes move {
+  from {
+    transform: rotateZ(0deg);
+  }
+
+  to {
+    transform: rotateZ(360deg);
+  }
 }
 
 @media (max-width: 768px) {
