--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,31 +2,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Karla&display=swap');
 
 .logo {
-    font-family: 'Baloo 2', cursive;
-    color: #00122C;
+    font-family: 'Titillium Web', sans-serif;
+    color: #fcfcfc;
     z-index: 1000;
+    letter-spacing: 10px;
 }
 
 .navbar {
-    height: 70px;
-    background-color: white;
+    height: 120px;
+    background-color: #141936;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 0.1px 5px 1px rgb(173, 158, 158);
 }
 
 .list {
     display: flex;
     justify-content: space-around;
-    width: 30%;
+    width: 25%;
 }
 
 .listItem {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #00122C;
+    font-family: 'Titillium Web', sans-serif;
+    color: #fcfcfc;
     cursor: pointer;
+    transition: 0.2s ease-in-out;
 }
+
+.listItem::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background: #fcfcfc;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 200ms ease-in;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .listItem:hover::after {
+            transform: scaleX(1);
+            transform-origin: left;
+  }
 
 .listItemFirst {
     font-family: Arial, Helvetica, sans-serif;
@@ -38,14 +58,47 @@
     display: none;
 }
 
+.listItemLast {
+    font-family: 'Titillium Web', sans-serif;
+    color: #fcfcfc;
+    cursor: pointer;
+    background-color: #0d131c;
+    padding: 0.5rem;
+    position: absolute;
+    right: 2.5rem;
+    top: 2.5rem;
+    transition: 0.2s ease-in-out;
+    border: 1px solid #192333
+}
+
+  
+  .listItemLast:hover {
+    background-color: #d8c1c1;
+  }
+
 .listItem:hover {
-    color:rgb(182, 162, 182);
+    color:#ffff;
 }
 
 .burger {
    width: 30px;
    height: auto;
    display: none;
+}
+
+.download {
+    z-index: 10;
+    color: #d8c1c1;
+    position: absolute;
+    right: 6.4rem;
+    top: 1.4rem;
+    height: 27px;
+    width: 27px;
+    transition: 0.2s ease-in-out;
+}
+
+.download:hover {
+    transform: scale(1.1);
 }
 
 @media (max-width: 768px) {
