--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,27 +1,110 @@
 .contactContainer {
-    width: 550px;
-    height: 400px;
+    width: 590px;
+    height: 440px;
     text-align: center;
-    background-color: #0d131c;
+    background-color: transparent;
     margin: auto;
     margin-bottom: 3rem;
-    margin-top: 4rem;
+    margin-top: 0rem;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 5rem;
+    text-align: center;
 }
 
 .contact-container {
     position: relative;
+    overflow: hidden;
+    text-align: center;
+    
 }
 
 .contactForm {
-    text-align: center;
-    padding: 3rem;
-    color: rgb(240, 230, 230)
+    width: 100%;
+    height: 50%;
+    position: relative;
+    
+    color: rgb(240, 230, 230);
+    margin: auto;
+    margin-top: 0rem;
+}
+
+.form-control {
+    width: 150%;
+    height: 15%;
+    padding-top: 15px;
+    border: none;
+    position: relative;
+    margin-top: 2.4rem;
+    outline: none;
+    background: transparent;
+    border-bottom: 1px solid white;
+    color: white;
+}
+
+.form-message {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 45%;
+    max-height: 45%;
+    padding-top: 35px;
+    border: none;
+    position: relative;
+    outline: none;
+    background: transparent;
+    border-bottom: 1px solid white;
+    color: white;
+    margin-top: 2rem;
+}
+
+.label-name {
+    margin-top: 0.5rem;
+    position: absolute;
+    left: 0;
+    color: white;
+    pointer-events: none;
+}
+
+.form-message:focus + .label-name .content-name,
+.form-message:valid + .label-name .content-name
+ {
+    transform: translateY(-1.5rem);
+    font-size: 14px;
+}
+
+.form-message:focus + .label-name .content-message,
+.form-message:valid + .label-name .content-message
+ {
+    transform: translateY(-1.5rem);
+    font-size: 14px;
+}
+
+.form-control:focus + .label-name .content-name,
+.form-control:valid + .label-name .content-name
+ {
+    transform: translateY(-1.5rem);
+    font-size: 14px;
+}
+
+
+.content-name {
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    transition: all 0.3s ease;
+}
+
+.content-message {
+    position: absolute;
+    bottom: -3rem;
+    left: 0;
+    transition: all 0.3s ease;
 }
 
 .contact-title {
     color: rgb(240, 230, 230);
-    margin-bottom: 2rem;
-    margin-top: -1rem;
+    margin-top: 0rem;
 
 }
 
@@ -38,6 +121,7 @@
     padding: 0.5rem;
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    margin-top: 2rem;
 }
 
 .contact-btn:hover {
@@ -47,18 +131,22 @@
 }
 
 .awesome {
-   font-size: 3rem;
-   margin-top: 2.5rem;
-   color: white;
+   font-size: 4rem;
+   margin-top: 1rem;
+   color: #f0e6e6;
 }
 
 .contacts {
-  
-  color: rgb(230, 211, 211);
-  font-size: 4rem;
-  margin-top: 3rem;
-  border-bottom: 1px solid rgb(230, 211, 211);
+  color: #f0e6e6;
+  font-size: 2.4rem;
   width: 100%;
+  padding: 0.4rem;
+}
+
+.contact-div {
+    background-color: #0d131c;
+    width: 25%;
+    margin: auto;
 }
 
 .contact-form {
@@ -70,7 +158,7 @@
 
 .contact-form:hover {
     background-color: rgb(240, 230, 230);
-    color: rgb(24, 22, 22);
+    color: rgb(182, 36, 36);
 
 }
 
@@ -78,9 +166,10 @@
     height: 600px;
     width: auto;
     position: absolute;
-    bottom: -6.5rem;
-    left: -15rem;
-    z-index: -1;
+    right: 0;
+    bottom: 10%;
+    
+    
 }
 
 .starss {
@@ -88,7 +177,7 @@
     width: auto;
     position: absolute;
     bottom: 19rem;
-    right: 0rem;
+    left: 0rem;
 }
 
 .starss2 {
@@ -96,7 +185,7 @@
     width: auto;
     position: absolute;
     bottom: 2rem;
-    right: -5rem;
+    left: -5rem;
 }
 
 .starss3 {
@@ -106,4 +195,128 @@
     bottom: 22rem;
     right: 40%;
     z-index: -1;
+}
+
+.starss4 {
+    height: 90px;
+    width: auto;
+    position: absolute;
+    bottom: 22rem;
+    right: -2rem;
+    z-index: -1;
+}
+
+.starss5 {
+    height: 90px;
+    width: auto;
+    position: absolute;
+    bottom: 5rem;
+    right: 1rem;
+    z-index: -1;
+}
+
+@media (max-width: 1050px) {
+    .contact-div {
+        background-color: #0d131c;
+        width: 30%;
+        margin: auto;
+    }
+
+}
+
+@media (max-width: 890px) {
+    .awesome {
+        font-size: 3rem;
+        margin-top: 1rem;
+        color: #f0e6e6;
+     }
+     
+     .contacts {
+       color: #f0e6e6;
+       font-size: 2rem;
+       width: 100%;
+     }
+     
+     .contact-div {
+         background-color: #0d131c;
+         width: 25%;
+         margin: auto;
+         margin-bottom: 2rem;
+     }
+     
+    
+}
+
+@media (max-width: 720px) {
+    .contact-div {
+        background-color: #0d131c;
+        width: 30%;
+        margin: auto;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 670px) {
+    .contactContainer {
+        width: 500px;
+        height: 440px;
+        text-align: center;
+        background-color: transparent;
+        margin: auto;
+        margin-bottom: 3rem;
+        margin-top: 0rem;
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 5rem;
+        text-align: center;
+    }
+
+    .contact-div {
+        background-color: #0d131c;
+        width: 35%;
+        margin: auto;
+        margin-bottom: 2rem;
+    }
+
+}
+
+@media (max-width: 590px) {
+    .contactContainer {
+        width: 450px;
+        height: 440px;
+        text-align: center;
+        background-color: transparent;
+        margin: auto;
+        margin-bottom: 3rem;
+        margin-top: 0rem;
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 5rem;
+        text-align: center;
+    }
+
+}
+
+@media (max-width: 520px) {
+    .contactContainer {
+        width: 400px;
+        height: 440px;
+        text-align: center;
+        background-color: transparent;
+        margin: auto;
+        margin-bottom: 3rem;
+        margin-top: 0rem;
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 5rem;
+        text-align: center;
+    }
+
+    .contact-div {
+        background-color: #0d131c;
+        width: 40%;
+        margin: auto;
+        margin-bottom: 2rem;
+    }
+
 }
