--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,20 +6,37 @@
     color: #fcfcfc;
     z-index: 1000;
     letter-spacing: 10px;
+    margin-left: 2rem;
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar {
-    height: 120px;
+    height: 90px;
     background-color: #141936;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    margin-right: 5rem;
+    z-index: 1000000000;
+    opacity: 0.99;
+    box-shadow: 1px 0.5px 15px 0px black;
+    transition: 0.2s ease-in-out;
 }
 
 .list {
     display: flex;
     justify-content: space-around;
-    width: 25%;
+    width: 45%;
+    z-index: 100000000000000000000000000000000000000000;
+    
 }
 
 .listItem {
@@ -27,6 +44,7 @@
     color: #fcfcfc;
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    margin-left: 1rem;
 }
 
 .listItem::after {
@@ -61,23 +79,26 @@
 .listItemLast {
     font-family: 'Titillium Web', sans-serif;
     color: #fcfcfc;
+    background-color: transparent;
     cursor: pointer;
-    background-color: #0d131c;
-    padding: 0.5rem;
-    position: absolute;
-    right: 2.5rem;
-    top: 2.5rem;
+    border: 2px dotted rgb(228, 218, 218);
     transition: 0.2s ease-in-out;
-    border: 1px solid #192333
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    margin-right: 1rem;
+    margin-left: 2rem;
+    font-size: 1rem;
+    margin-right: 22rem;
 }
 
   
   .listItemLast:hover {
-    background-color: #d8c1c1;
+    background-color: #0d131c;
+    color: white;
   }
 
 .listItem:hover {
-    color:#ffff;
+    color:rgb(236, 226, 226);
 }
 
 .burger {
@@ -101,95 +122,200 @@
     transform: scale(1.1);
 }
 
-@media (max-width: 768px) {
+.burger {
+    display: none;
+}
 
-    .burger {
-        width: 30px;
-        height: auto;
-        display: block;
-        z-index: 1000;
-        margin-right: 2rem;
+.social-mediaaaa {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #00122c;
+    z-index: 1000000000;
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 60rem;
+    left: 5rem;
+    display: none;
+  }
+
+  .burgerOpen {
+    font-size: 2rem;
+    color: #e2d5d5;
+    position: absolute;
+    right: 2rem;
+    top: 27rem;
+    cursor: pointer;
+    border: 2px dotted white;
+    padding: 0.5rem;
+    width: 40px;
+    height: 40px;
+    display: none;
+}
+
+@media (max-width: 1125px) {
+    .listItemLast {
+        font-family: 'Titillium Web', sans-serif;
+        color: #fcfcfc;
+        background-color: transparent;
         cursor: pointer;
-     }
-
-    .logo {
-        font-family: 'Baloo 2', cursive;
-        color: #00122C;
-        z-index: 1000;
-        margin-left: 3rem;
+        border: 2px dotted rgb(228, 218, 218);
+        transition: 0.2s ease-in-out;
+        padding-left: 0.2rem;
+        padding-right: 0.2rem;
+        margin-right: 1rem;
+        margin-left: 2rem;
+        font-size: 1rem;
+        margin-right: 22rem;
     }
 
+}
+
+
+@media (max-width: 768px) {
+
     .navbar {
-        height: 70px;
-        background-color: white;
+        height: 90px;
+        background-color: #141936;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0px 0.1px 5px 1px rgb(173, 158, 158);
-        z-index: 10000;
-        width: 100%;
+        position: fixed;
+        
+        
     }
 
     .list {
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        position: fixed;
-        overflow: scroll;
-        background: #f0f3f7;
-        padding: 40px;
-        width: 100%;
-        z-index: 10;
-        transform: translateY(-700px);
-        transition: 0.5s ease-in-out;
-    }
-
-    .listItem {
-        font-family: 'Baloo 2', cursive;
-        font-size: 2.3rem;
-        color: #00122C;
-        cursor: pointer;
-        padding: 10px;
-    }
-
-    .listItemFirst {
-        font-family: Arial, Helvetica, sans-serif;
-        color: #6b7179;
-        cursor: pointer;
-        font-weight: 700;
-        margin-left: 0.7rem;
-        margin-bottom: 1rem;
-        display: block;
-        padding-top: 5rem;
-    }
-
-    .footer {
-        font-family: Arial, Helvetica, sans-serif;
-        line-height: 15px;
-        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        text-align: center;
-        background-color: burlywood;
-        padding: 2rem;
+        margin-top: 27rem;
+        width: 55vh;
+        background-color: #00122c;
+        height: 200vh;
+        z-index: 100000000000000000000000000000000000000000;
+        position: fixed;
+        top:-125%;
+        right: 0;
+        transition: 0.2s ease-in-out;
+        
+        
     }
 
-    .media {
-        margin-bottom: 5rem;
-        width: 100px;
-        height: auto;
-        margin: auto;
+    .listItemFirst {
+        padding-left: 1rem;
+        padding-bottom: 1rem;
+        font-size: 2.5rem;
     }
 
-}
+    .listItem {
+        padding-left: 1rem;
+        padding-bottom: 1rem;
+        font-size: 2.5rem;
+        color: white;
 
-@media (max-width: 1000px) {
-    .list {
+    }
+
+    .listItemLast {
+        font-family: 'Titillium Web', sans-serif;
+        color: #fcfcfc;
+        cursor: pointer;
+        border: 2px dotted white;
+        transition: 0.2s ease-in-out;
+        font-size: 2rem;
+        width: 122px;
+        margin-top: 2rem;
+        align-items: center;
+        
+    }
+
+    .listItemLast:hover {
+        background-color: #141936;
+        color: white;
+      }
+
+    .burger {
+        display: block;
+        margin-right: 2rem;
+        color: #e2d5d5;
+        cursor: pointer;
+        z-index: 100000000000;
+        position: absolute;
+        right: 0;
+        border: 2px dotted #e2d5d5;
+        width: 40px;
+        height: 40px;
+        padding: 0.5rem;
+        margin-right: 2rem;
+
+    }
+
+    .burgerOpen {
+        font-size: 2rem;
+        color: #e2d5d5;
+        position: absolute;
+        right: 2rem;
+        top: 27rem;
+        cursor: pointer;
+        border: 2px dotted white;
+        padding: 0.5rem;
+        width: 40px;
+        height: 40px;
+        display: block;
+    }
+
+    .oveeer {
+        background-color: #141936;
+        width: 100vh;
+        height: 120vh;
+        position: fixed;
+        z-index: 100000;
+        opacity: 0.8;
+        margin-top: -15rem;
+        
+    }
+
+    .social-mediaaaa {
+        color: white;
         display: flex;
-        justify-content: space-around;
-        width: 40%;
-    }
+        flex-direction: row;
+        justify-content: center;
+        background-color: #00122c;
+        z-index: 1000000000;
+        display: block;
+        text-align: center;
+        position: absolute;
+        top: 60rem;
+        left: 5rem;
+      }
+
+      .social-mediaaa > li {
+        transition: 0.2s ease-in-out;
+        
+        
+      }
+
+      .social-mediaaa > li > a:hover {
+        color:#cebcbc;
+      }
+
+      .githubb {
+        margin-top: 1rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        font-size: 1.9rem;
+        color: white;
+        cursor: pointer;
+        transition: 0.2s ease-in-out;
+      }
+
+      .githubb:hover {
+        color:rgb(207, 186, 186);
+
+      }
+
+
+    
+
 }
+
